[package]
name = "cmdcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
file-lock = "2.1.11"
filetime = "0.2.18"
humantime = "2.1.0"
xdg = "2.4.1"
